--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
     />
     <title>Portfolio - LexBal</title>
-    <script id="react-dotenv" src="./env.js"></script>
+    <script
+      id="react-dotenv"
+      src="https://lexbal.github.io/portfolio/env.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
